# PrimitiveShikakuSolver

./: LICENSE  README.md  main.py  pyproject.toml
src/: file_parser.py  generated_puzzle.txt  puzzle_generator.py  solver.py  visualizer.py
src/grid_examples/: grid1.txt  grid2.txt  grid3.txt  grid4.txt  grid5.txt
src/tests/: tests.py
